--- a/cc-api-gateway-zuul/src/main/resources/application.properties
+++ b/cc-api-gateway-zuul/src/main/resources/application.properties
@@ -8,8 +8,8 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ConnectTimeout=10000
 ribbon.ReadTimeout=20000
 
-zuul.routes.worker.service-id=cc-worker
-zuul.routes.worker.path=/cc-worker/**
+zuul.routes.resident.service-id=cc-resident
+zuul.routes.resident.path=/cc-resident/**
 
 zuul.routes.user.service-id=cc-user
 zuul.routes.user.path=/cc-user/**
