--- a/cc-api-gateway-zuul/src/main/resources/application.properties
+++ b/cc-api-gateway-zuul/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=cc-api-gateway-zuul
 server.port=8765
 
-#eureka.client.service-url.defaultZone=http://cc-eureka-server:8761/eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://cc-eureka-server:8761/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 ribbon.ConnectTimeout=10000
