--- a/cc-oauth/src/main/resources/bootstrap.properties
+++ b/cc-oauth/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.application.name=cc-oauth
 
-#spring.cloud.config.uri=http://cc-config-server:8888
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://cc-config-server:8888
+#spring.cloud.config.uri=http://localhost:8888
 
 management.endpoints.web.exposure.include=*
