--- a/cc-user/src/main/resources/application.properties
+++ b/cc-user/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=cc-user
 server.port=${PORT:0}
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-#eureka.client.service-url.defaultZone=http://cc-eureka-server:8761/eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://cc-eureka-server:8761/eureka
+#ureka.client.service-url.defaultZone=http://localhost:8761/eureka
