--- a/cc-user/src/main/resources/bootstrap.properties
+++ b/cc-user/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 spring.application.name=cc-user
-#spring.cloud.config.uri=http://cc-config-server:8888
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://cc-config-server:8888
+#spring.cloud.config.uri=http://localhost:8888
 
 spring.profiles.active=dev
 
